--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div id="root"></div>
+  <div id="modals"></div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
